# semantik-mcp

./: .clinerules  .gitignore  ANLEITUNG.md  README.md  llm-doku.md  mappings.json  protected_terms.json  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml
.github/workflows/: codacy.yml  codeql.yml
mcp_server/: llm_providers.py  main.py  tracker.py
scripts/: run_server.py
tests/: __init__.py  conftest.py  test_llm_providers.py  test_map_text.py  test_optimize_code.py  test_run_server.py  test_ssrf_protection.py  test_summarize_text.py  test_tracker.py
